--- a/oauth2discord/discordlogin/templates/welcome.html
+++ b/oauth2discord/discordlogin/templates/welcome.html
@@ -15,7 +15,7 @@
 <body>
 <section class="cd-intro">
 	<div class="cd-intro-content mask">
-		<h1 data-content="Welcome"><span>Welcome</span></h1>
+		<h1 data-content="Welcome to CS Tribunal"><span>Welcome</span></h1>
 		<div class="action-wrapper">
 			<p>
 				<a href="#0" class="cd-btn main-action">Authorize with Discord</a>
