Welcome Page funktioniert mit CSS und JS

--- a/oauth2discord/discordlogin/templates/welcome.html
+++ b/oauth2discord/discordlogin/templates/welcome.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<!https://codyhouse.co/gem/animated-intro-section>
 <html lang="en" class="no-js">
 <head>
 	<meta charset="UTF-8">
@@ -15,11 +16,11 @@
 <body>
 <section class="cd-intro">
 	<div class="cd-intro-content mask">
-		<h1 data-content="Welcome to CS Tribunal"><span>Welcome</span></h1>
+		<h1 data-content="Welcome to CS Tribunal"><span>Welcome to CS Tribunal</span></h1>
 		<div class="action-wrapper">
 			<p>
-				<a href="#0" class="cd-btn main-action">Authorize with Discord</a>
-				<a href="#0" class="cd-btn">Login</a>
+				<a href="oauth2" class="cd-btn main-action">Authorize with Discord</a>
+				<a href="oauth2redirect" class="cd-btn">Login</a>
 			</p>
 		</div>
 	</div>
