navbar vote.html

--- a/oauth2discord/discordlogin/templates/main.html
+++ b/oauth2discord/discordlogin/templates/main.html
@@ -4,8 +4,15 @@
 <head>
 
     {% block content %}
+    <nav class= "navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class= "navbar-header">
+                <a class="navbar-brand">CS Tribunal</a>
+            </div>
 
+        </div>
 
+    </nav>
     {% endblock %}
 
     <hr>
