--- a/oauth2discord/discordlogin/static/css/vote.css
+++ b/oauth2discord/discordlogin/static/css/vote.css
@@ -1,7 +1,11 @@
-/* Change the color of links on hover */
+/* Change the color of links on hover todo: funktioniert nicht*/
 .topnav a:hover {
   background-color: #ddd;
   color: black;
+}
+body {
+  color: white;
+  background-color: #2e416a;
 }
 div {
   padding-top: 5px;
