--- a/oauth2discord/discordlogin/templates/vote.html
+++ b/oauth2discord/discordlogin/templates/vote.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'css/vote.css' %}">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2e416a;">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #243353;">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -20,10 +20,13 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Welcome <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="#">Instructions<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Settings<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
             <a class="nav-link" href="#">Contact <span class="sr-only">(current)</span></a>
@@ -32,7 +35,7 @@
       
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
       </form>
       <li class="nav-item active">
         <a class="nav-link" href="#">Logout <span class="sr-only">(current)</span></a>
