--- a/oauth2discord/discordlogin/templates/vote.html
+++ b/oauth2discord/discordlogin/templates/vote.html
@@ -37,9 +37,7 @@
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
       </form>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Logout <span class="sr-only">(current)</span></a>
-      </li>
+      <button type="button" class="btn btn-link">Logout</button>
     </div>
   </nav>
   <div>
