--- a/oauth2discord/discordlogin/templates/vote.html
+++ b/oauth2discord/discordlogin/templates/vote.html
@@ -1,54 +1,20 @@
 <!DOCTYPE html>
-{% load static %}
+{% extends "main.html" %}
+
 <html>
-<head>
-	<title>CS Tribunal</title>
-
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
-
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-	<link rel="stylesheet" type="text/css" href="{% static 'css/vote.css' %}">
-</head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #243353;">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="navbar-brand" href="#">CS Tribunal</a>
-  
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Welcome <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Instructions<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Settings<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-            <a class="nav-link" href="#">Contact <span class="sr-only">(current)</span></a>
-        </li>  
-      </ul>
-      
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-      <button type="button" class="btn btn-link">Logout</button>
+  {% block main %}
+  <body>
+    <div>
+      <div class="column">
+        <h1>Vote</h1>
+        <button type="button" class="btn btn-success btn-block btn-lg">Support</button>
+        <button type="button" class="btn btn-danger btn-block btn-lg">Punish</button>
+        <button type="button" class="btn btn-primary btn-block btn-lg">Next</button>
+      </div>
+      <div class="column">
+        <img src="static/images/avatar.png" alt="avatar">
+      </div>
     </div>
-  </nav>
-  <div>
-    <div class="column">
-      <h1>Vote</h1>
-      <button type="button" class="btn btn-success btn-block btn-lg">Support</button>
-      <button type="button" class="btn btn-danger btn-block btn-lg">Punish</button>
-      <button type="button" class="btn btn-primary btn-block btn-lg">Next</button>
-    </div>
-    <div class="column">
-      <img src="static/images/avatar.png" alt="avatar">
-    </div>
-  </div>
-</body>
+  </body>
+  {% endblock %}
+</html>
