--- a/oauth2discord/discordlogin/templates/instructions.html
+++ b/oauth2discord/discordlogin/templates/instructions.html
@@ -1,2 +1,6 @@
 <!DOCTYPE html>
 {% extends "main.html" %}
+{% load static %}
+{% block content %}
+    <h1>Instructions</h1>
+{% endblock content %}
