--- a/oauth2discord/discordlogin/templates/main.html
+++ b/oauth2discord/discordlogin/templates/main.html
@@ -1,19 +1,16 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-<head>
-
-    {% block content %}
-    <head>
-        <title>CS Tribunal</title>
-    
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
-    
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    
-        <link rel="stylesheet" type="text/css" href="{% static 'css/vote.css' %}">
-    </head>
-    <body>
+  <head>
+      <title>CS Tribunal</title>
+  
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
+  
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  
+      <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+  </head>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #243353;">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -43,9 +40,6 @@
           <button type="button" class="btn btn-link">Logout</button>
         </div>
       </nav>
-    {% endblock %}
-
     <hr>
-</body>
-   
+  </body> 
 </html>
