connect links to navbar

--- a/oauth2discord/discordlogin/templates/instructions.html
+++ b/oauth2discord/discordlogin/templates/instructions.html
@@ -2,5 +2,8 @@
 {% extends "main.html" %}
 {% load static %}
 {% block content %}
+<div>
     <h1>Instructions</h1>
+</div>
+    
 {% endblock content %}
