--- a/oauth2discord/discordlogin/templates/vote.html
+++ b/oauth2discord/discordlogin/templates/vote.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 {% extends "main.html" %}
-{% load static %}
 {% block content %}
   <div>
     <div class="column">
@@ -13,4 +12,4 @@
       <img src="static/images/avatar.png" alt="avatar">
     </div>
   </div>
-  {% endblock content%}
+{% endblock %}
