--- a/oauth2discord/discordlogin/templates/welcome.html
+++ b/oauth2discord/discordlogin/templates/welcome.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <!https://codyhouse.co/gem/animated-intro-section>
+{% block content %}
 <html lang="en" class="no-js">
 <head>
 	<meta charset="UTF-8">
@@ -30,3 +31,4 @@
 <script src="static/js/main.js"></script> <!-- Resource jQuery -->
 </body>
 </html>
+{% endblock %}
