versuch berechtigungen auf Sites durch login

--- a/oauth2discord/discordlogin/templates/instructions.html
+++ b/oauth2discord/discordlogin/templates/instructions.html
@@ -4,6 +4,8 @@
 {% block content %}
 <div>
     <h1>Instructions</h1>
+    <p>On the right side you can see the player you are voting on. If you feel like the the player didn't violate any rules, you can press Support on the left side. If you think that the player acts unfair, you can press Punish and if you don't want to judge this player, you can skip by pressing Next.
+    </p>
 </div>
     
 {% endblock content %}
