--- a/oauth2discord/discordlogin/templates/login.html
+++ b/oauth2discord/discordlogin/templates/login.html
@@ -3,9 +3,7 @@
 {% load static %}
 {% block content %}
 <div>
-    <h1>Contact</h1>
-    <p>Marco Furrer</p>
-    <p>Marc Singer</p>
+    <h1>Login</h1>
 </div>
     
 {% endblock content %}
