--- a/oauth2discord/discordlogin/templates/main.html
+++ b/oauth2discord/discordlogin/templates/main.html
@@ -35,7 +35,7 @@
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
           </form>
-          <button type="button" class="btn btn-link" href="welcome" >Logout</button>
+          <a href="welcome">Logout</a>
         </div>
       </nav>
     <hr>
